# Computational-mathematics

vichmat/3342_Mohamed_Mahmoud_Hanafy_lab10/: 3342_Mohamed_Mahmoud_Hanafy_lb10.docx  main.py  saico.py
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab11/: 3342_Mohamed_Mahmoud_Hanafy_lb11.docx  main.py
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab12/: 3342_Mohamed_Mahmoud_Hanafy_lab12.docx  main.py
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab3/: 3342_Mohamed_Mahmoud_Hanafy_lb3.docx
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab3/src/: main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab4/: 3342_Mohamed_Mahmoud_Hanafy_lb4.docx
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab4/src/: main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab5/: 3342_Mohamed_Mahmoud_Hanafy_lb5.docx
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab5/src/: main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab6/: 3342_Mohamed_Mahmoud_Hanafy_lb6.docx
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab6/src/: main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab7/: 3342_Mohamed_Mahmoud_Hanafy_lb7.docx  CMakeLists.txt  main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab8/: 3342_Mohamed_Mahmoud_Hanafy_lb8.docx  CmakeLists.txt  main.cpp
vichmat/3342_Mohamed_Mahmoud_Hanafy_lab9/: 3342_Mohamed_Mahmoud_Hanafy_lb9.docx  data.txt  main.py
